[package]
authors = ["Aidan Gratton <gratton.aidan@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "braincell"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-write = "0.1.0"
cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"
libm = "0.2.5"

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"] 

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f446", "rt"]

[[bin]]
name = "braincell"
path = "src/bin/braincell/main.rs"
test = false
bench = false

[lib]
name = "braincell"
path = "src/lib/lib.rs"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
